# arezzo

./: .gitignore  CLAUDE.md  OPUS_BRIEF.md  README.md  ROADMAP.md  SESSION_LOG.md  pyproject.toml  server.json
.github/workflows/: publish-mcp-registry.yml
_strategy/: ARCHITECTURE.md  OPUS_REVIEW_RESPONSE.md  OPUS_SOURCE_REVIEW.md  mcp-directory-submissions.md
_strategy/plans/: agent-adoption-docs.md  distribution-launch.md  live-testing-program.md
_strategy/research/: FINDINGS.md  OPERATION_CATALOG.md
arezzo/: __init__.py  address.py  auth.py  cli.py  compiler.py  errors.py  index.py  parser.py  server.py  setup.py
arezzo/operations/: __init__.py  format.py  objects.py  organization.py  structure.py  text.py
arezzo/tests/: conftest.py  test_address.py  test_compiler.py  test_format_ops.py  test_index.py  test_objects_ops.py  test_organization_ops.py  test_parser.py  test_server.py  test_structure_ops.py  test_text_ops.py
fixtures/: 01_plain_text.json  02_heading_hierarchy.json  03_inline_formatting.json  04_lists.json  05_tables.json  06_images.json  07_headers_footers_footnotes.json  08_named_ranges.json  09_tabs.json  10_comments.json  11_kitchen_sink.json  12_horizontal_rules_page_breaks.json  13_bookmarks.json  manifest.json
fixtures/mutations/F1_apply_bold/: after.json  before.json  description.md  request.json
fixtures/mutations/F2_change_heading_level/: after.json  before.json  description.md  request.json
scripts/: auth.py  capture_mutations.py  create_fixtures.py  pull_fixtures.py  validate_live.py  validate_mcp.py
(+100 files in other folders)
